java-maven-sonar-argocd-helm-k8s/spring-boot-app-manifests/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spring-boot-app
  labels:
    app: spring-boot-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: spring-boot-app
  template:
    metadata:
      labels:
        app: spring-boot-app
    spec:
      containers:
      - name: spring-boot-app
        image: sivasuribabu/ultimate-cicd:17
        ports:
        - containerPort: 8080
