java-maven-sonar-argocd-helm-k8s/spring-boot-app-manifests/service.yml
apiVersion: v1
kind: Service
metadata:
  name: spring-boot-app
spec:
  type: NodePort
  ports:
  - name: http
    port: 8010
    targetPort: 8010
    protocol: TCP
  selector:
    app: spring-boot-app
