java-maven-sonar-argocd-helm-k8s/spring-boot-app-manifests/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: spring-boot-app
spec:
  rules:
  - host: foo.bar.com
    http:
      paths:
      - pathType: Prefix
        path: /bar
        backend:
          service:
            name: spring-boot-app
            port:
              number: 8010
